Adição de Placeholder no index.html

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <form id="calc-form">
       <div>
         <label for="id-nome">Nome</label>
-        <input type="text" name="nome" id="id-nome" class="obrigatorio">
+        <input type="text" name="nome" id="id-nome" class="obrigatorio" placeholder="Informe seu nome.">
         <span  id="error" class="error-rotulo">Por favor, informe seu nome</span>
       </div>
       
       <div>
         <label for="id-altura">Altura(m)</label>
-        <input type="number" name="altura" id="id-altura" step="0.01" required >     
+        <input type="number" name="altura" id="id-altura" placeholder="Informe sua altura." step="0.01" required >     
       </div>
 
       <div>
         <label for="id-peso">Peso(Kg)</label>
-        <input type="number" name="peso" id="id-peso" step="0.01" required>        
+        <input type="number" name="peso" id="id-peso" placeholder="Informe seu peso." step="0.01" required>        
       </div>
       <input type="hidden" name="categoria" id="categoria">
 
